<resources>
    <string name="app_name">LabAndriodDemo</string>
    <string name="create_character">Create Character</string>
    <string name="create_character2">Create Character</string>
    <string name="create_character3">Create Character</string>
    <string name="welcome_adventurer_charactername">Welcome\nAdventurer\nCharacterName</string>
    <string name="level">Level: ###</string>
    <string name="hp">Hp: ##/##</string>
    <string name="gold">Gold: ###</string>
    <string name="preference_file_key">compDoomPreferenceFileNameProject</string>
    <string name="preference_userId_key">compDoomPreferenceUserIdKeyProject</string>
    <string name="adminCode">0</string>
    <string name="logout">Logout</string>
    <string name="admin_true">Admin: True</string>
    <string name="admin_false">Admin: False</string>
    <string name="town">Town</string>
    <string name="levelT">Level: ###</string>
    <string name="goldT">Gold: ###</string>
    <string name="hpT">HP ##/##</string>
    <string name="rest_x_goldT">Rest \n(Replenish 25% HP for 10 Gold)</string>
    <string name="shopT">Shop</string>
    <string name="leaveT">Leave</string>
    <string name="goldS">Gold: ###</string>
    <string name="damage_1S">Attack Modifier +1 \n (20 gold)</string>
    <string name="health_1S">Max Health +5 \n (20 gold)</string>
    <string name="flee_chance_1S">Flee Chance +10% \n (10 gold)</string>
    <string name="backS">Back</string>
    <string name="enemy_hpV">Enemy Hp: ##/##</string>
    <string name="current_situationV">Current Situation</string>
    <string name="attackV">Attack</string>
    <string name="fleeV">Flee</string>
    <string name="battle_xV">Battle X</string>
    <string name="welcome_admin">Welcome Admin</string>
    <string name="editing_character">Character Info:</string>
    <string name="character_name">Name:</string>
    <string name="character_id">Character ID:</string>
    <string name="user">User ID:</string>
    <string name="edit_properties">Edit Properties:</string>
    <string name="gold_edit_label">Gold:</string>
    <string name="level_edit_label">Level:</string>
    <string name="current_hp_edit_label">Current HP:</string>
    <string name="max_hp_edit_label">Max HP:</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_by_id">Search By ID</string>
    <string name="search_by_name">Search By Name</string>
    <string name="enter_a_positive_integer">Enter a positive integer</string>
    <string name="admin_edit_default_value">0</string>
    <string name="admin_search_button_label">Go</string>
    <string name="back_to_menu_admin">Back to Menu</string>
    <string name="victory">Victory</string>
    <string name="level_up">Level Up!</string>
    <string name="gold_gained">## Gold gained</string>
    <string name="returnV">Return</string>
    <string name="game_over">Game Over</string>
    <string name="restartGO">Restart</string>
    <string name="final_levelGO">Final Level</string>
    <string name="back_to_main_menu_history">Back to Main Menu</string>
    <string name="charactername_s_nhistory">Battle History</string>
    <string name="admin_powers_button_text">Admin Powers</string>
</resources>