<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPowersActivity">

    <TextView
        android:id="@+id/adminPowersTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/welcome_admin"
        android:textColor="@color/black"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ToggleButton
        android:id="@+id/characterSearchToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:textOff="@string/search_by_id"
        android:textOn="@string/search_by_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/adminPowersTitleTextView" />


    <EditText
        android:id="@+id/characterSearchBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Search"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/characterSearchToggle"
        app:layout_constraintTop_toBottomOf="@id/adminPowersTitleTextView"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:id="@+id/adminSearchButton"
        android:text="@string/admin_search_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/characterSearchBar"
        android:textSize="14sp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/black"
        />

    <TextView
        android:id="@+id/currentCharacterTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:gravity="start"
        android:text="@string/editing_character"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/characterSearchToggle"
        />

    <TextView
        android:id="@+id/currentCharacterNameTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start"
        android:text="@string/character_name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterTextView"
        />

    <TextView
        android:id="@+id/currentCharacterIdTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start"
        android:text="@string/character_id"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterNameTextView"
        />

    <TextView
        android:id="@+id/currentCharacterUserTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="start"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterIdTextView"
        />

    <TextView
        android:id="@+id/currentCharacterEditableTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:gravity="start"
        android:text="@string/edit_properties"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterUserTextView"
        />

    <TextView
        android:id="@+id/currentCharacterGoldTextView"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/gold_edit_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterEditableTextView"
        />

    <EditText
        android:id="@+id/characterGoldEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_positive_integer"
        android:text="@string/admin_edit_default_value"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/currentCharacterGoldTextView"
        app:layout_constraintStart_toEndOf="@id/currentCharacterGoldTextView"
        />

    <TextView
        android:id="@+id/currentCharacterLevelTextView"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/level_edit_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterGoldTextView"
        />

    <EditText
        android:id="@+id/characterLevelEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_positive_integer"
        android:text="@string/admin_edit_default_value"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/currentCharacterLevelTextView"
        app:layout_constraintStart_toEndOf="@id/currentCharacterLevelTextView"
        />

    <TextView
        android:id="@+id/currentCharacterCurrentHealthTextView"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/current_hp_edit_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterLevelTextView"
        />

    <EditText
        android:id="@+id/characterCurrentHealthEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_positive_integer"
        android:text="@string/admin_edit_default_value"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/currentCharacterCurrentHealthTextView"
        app:layout_constraintStart_toEndOf="@id/currentCharacterCurrentHealthTextView"
        />

    <TextView
        android:id="@+id/currentCharacterMaxHealthTextView"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:text="@string/max_hp_edit_label"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currentCharacterCurrentHealthTextView"
        />

    <EditText
        android:id="@+id/characterMaxHealthEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_a_positive_integer"
        android:text="@string/admin_edit_default_value"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/currentCharacterMaxHealthTextView"
        app:layout_constraintStart_toEndOf="@id/currentCharacterMaxHealthTextView"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/currentCharacterMaxHealthTextView"
        android:id="@+id/adminSaveButton"
        android:text="@string/save_changes"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/black"
        />


</androidx.constraintlayout.widget.ConstraintLayout>