<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".townScreen">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:id="@+id/townName"
        android:textSize="42sp"
        android:text="@string/town"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dip"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/levelT"
        app:layout_constraintTop_toBottomOf="@+id/townName"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/levelTextView"
        android:textSize="24sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:text="@string/goldT"
        app:layout_constraintTop_toBottomOf="@+id/levelTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/goldTextView"
        android:textSize="24sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dip"
        android:text="@string/hpT"
        app:layout_constraintTop_toBottomOf="@+id/goldTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/hpTextView"
        android:textSize="24sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/hpTextView"
        android:id="@+id/restButton"
        android:text="@string/rest_x_goldT"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/restButton"
        android:id="@+id/shopButton"
        android:text="@string/shopT"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/shopButton"
        android:id="@+id/leaveButton"
        android:text="@string/leaveT"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />


</androidx.constraintlayout.widget.ConstraintLayout>