<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BattleScreenActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:id="@+id/battleName"
        android:text="@string/battle_xV"
        android:textSize="42sp"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dip"
        android:textColor="@color/black"
        tools:ignore="HardcodedText"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/hp"
        android:id="@+id/hpTextView"
        app:layout_constraintTop_toBottomOf="@+id/battleName"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/enemy_hpV"
        android:id="@+id/enemyHpTextView"
        app:layout_constraintTop_toBottomOf="@+id/hpTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="@string/current_situationV"
        android:id="@+id/currentSituationTextView"
        app:layout_constraintTop_toBottomOf="@id/enemyHpTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/currentSituationTextView"
        android:id="@+id/attackButton"
        android:text="@string/attackV"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@+id/attackButton"
        android:id="@+id/SurrenderButton"
        android:text="@string/fleeV"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
