<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VictoryScreen">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:id="@+id/victory"
        android:textSize="42sp"
        android:text="@string/victory"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dip"
        android:textColor="@color/black"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/gold_gained"
        app:layout_constraintTop_toBottomOf="@id/victory"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/goldGainedTextView"
        android:textSize="24sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/level_up"
        android:id="@+id/levelUpTextView"
        app:layout_constraintTop_toBottomOf="@id/goldGainedTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="105dp"
        app:layout_constraintTop_toBottomOf="@id/levelUpTextView"
        android:id="@+id/returnButton"
        android:text="@string/returnV"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
</androidx.constraintlayout.widget.ConstraintLayout>