<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TownShopActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:text="Town Shop"
        android:id="@+id/townShopTextView"
        android:textSize="42sp"
        android:gravity="center"
        android:layout_margin="16dip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dip"
        android:textColor="@color/black"
        tools:ignore="HardcodedText"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/goldS"
        android:id="@+id/goldTextView"
        app:layout_constraintTop_toBottomOf="@+id/townShopTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="30sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:text="Attack Modifier: +#"
        android:id="@+id/atkModTextView"
        app:layout_constraintTop_toBottomOf="@+id/goldTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:text="Health: ##/##"
        android:id="@+id/healthTextView"
        app:layout_constraintTop_toBottomOf="@+id/atkModTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dip"
        android:text="Flee Chance: #%"
        android:id="@+id/fleeChanceTextView"
        app:layout_constraintTop_toBottomOf="@+id/healthTextView"
        android:layout_margin="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:id="@+id/attackButton"
        android:text="@string/damage_1S"
        app:layout_constraintTop_toBottomOf="@+id/fleeChanceTextView"
        android:textSize="28sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:id="@+id/healthButton"
        android:text="@string/health_1S"
        app:layout_constraintTop_toBottomOf="@+id/attackButton"
        android:textSize="28sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:id="@+id/fleeChanceButton"
        android:text="@string/flee_chance_1S"
        app:layout_constraintTop_toBottomOf="@+id/healthButton"
        android:textSize="28sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:id="@+id/backButton"
        android:text="@string/backS"
        app:layout_constraintTop_toBottomOf="@+id/fleeChanceButton"
        android:textSize="32sp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="@color/red"
        />

</androidx.constraintlayout.widget.ConstraintLayout>